# photoViewer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cargo-sources.json  io.github.luyao_1024.photoviewer.yml  meson.build  org.gnome.PhotoViewer.yml  run-flatpak.sh
.github/workflows/: ci.yml
config/: i18n.en.example.json  i18n.example.json
data/: io.github.luyao_1024.photoviewer.desktop  io.github.luyao_1024.photoviewer.metainfo.xml  org.gnome.PhotoViewer.desktop  org.gnome.PhotoViewer.metainfo.xml  resources.gresource.xml
data/icons/: _generate.py
data/ui/: album-browser-page.blp  album-detail-page.blp  albums-page.blp  editor-page.blp  editor-panel.blp  media-grid.blp  mode-selector.blp  photo-tile.blp  photos-page.blp  search-page.blp  section-header.blp  trash-page.blp  viewer-page.blp  window.blp
docs/: README.md  architecture.md  development.md  liquid-glass.md  testing.md
docs/modules/: albums-trash.md  browsing.md  editor.md  keyboard.md  storage.md  ui-design.md  ui-liquid-glass.md  viewer.md
docs/superpowers/plans/: 2026-06-20-m1-foundation-and-browsing.md  2026-06-20-m2-thumbnails-and-viewer.md  2026-06-20-m3-albums-and-trash.md  2026-06-21-hover-selection-hint.md  2026-06-21-m4-editor.md  2026-06-21-m5-polish.md  2026-06-22-day-view-tile-size.md  2026-06-23-photos-mode-selector-redesign.md  2026-06-23-viewer-details-panel.md  2026-06-24-default-fs-watcher-live-refresh.md  2026-06-24-liquid-glass-ux-adaptation-phase-2.md  2026-06-24-liquid-glass-ux-adaptation.md  2026-06-26-video-viewing.md  2026-06-29-album-sidebar-management.md  2026-06-29-db-refresh-architecture.md  2026-06-30-theme-preference.md  2026-07-02-keyboard-adaptation.md
docs/superpowers/specs/: 2026-06-20-gnome-photo-viewer-design.md  2026-06-21-hover-selection-hint-design.md  2026-06-22-day-view-tile-size-design.md  2026-06-23-photos-mode-selector-redesign-design.md  2026-06-23-viewer-details-panel-design.md  2026-06-24-default-fs-watcher-design.md  2026-06-24-liquid-glass-ux-adaptation-design.md  2026-06-26-video-viewing-design.md  2026-06-29-album-sidebar-management-design.md  2026-06-29-db-refresh-architecture-design.md  2026-06-30-theme-preference-design.md  2026-07-02-keyboard-adaptation-design.md
i18n/: en.json  zh-CN.json
src/: app.rs  config.rs  lib.rs  main.rs
src/core/: album_ops.rs  albums.rs  bootstrap.rs  cache.rs  db.rs  error.rs  events.rs  i18n.rs  identity.rs  jpeg_scale_shim.c  log_targets.rs  media.rs  media_change_notifier.rs  metadata.rs  mod.rs  motion_photo.rs  notify_watcher.rs  orientation.rs  prefs.rs  refresh.rs  repository.rs  runtime_config.rs  schema.sql  section_model.rs  thumbnail_prewarm.rs  thumbnails.rs  trash.rs
src/core/backend/: local.rs  mod.rs  scan_worker.rs
src/core/edit/: brightness.rs  contrast.rs  crop.rs  destructive_rotate.rs  mod.rs  op.rs  rotate.rs  saturation.rs  save.rs
src/platform/: mod.rs  xdg.rs
src/ui/: album_browser_page.rs  album_detail_page.rs  album_picker.rs  albums_page.rs  apply_to_media_list.rs  edit_panel.rs  editor_page.rs  editor_panel.rs  empty_states.rs  glass_context_menu.rs  grid_css.rs  grid_row.rs  liquid_glass.rs  media_grid.rs  media_list.rs  mod.rs  mode_selector.rs  photo_tile.rs  photos_page.rs  search_page.rs  section_header.rs  theme.rs  toasts.rs  trash_page.rs  viewer_page.rs  window.rs
src/ui/keyboard/: action.rs  binding.rs  mod.rs  router.rs
src/ui/models/: media_window_model.rs  mod.rs
tests/: album_delete.rs  album_navigation.rs  album_ops.rs  album_order.rs  albums.rs  albums_find.rs  bootstrap.rs  cache.rs  db_migrations.rs  destructive_rotate.rs  e2e_browsing.rs  e2e_editor.rs  e2e_viewer.rs  e3e_albums_trash.rs  edit_ops.rs  edit_save.rs  edit_state.rs  flatpak_audio.rs  local_scan.rs  locale_pictures_dir.rs  media_crud.rs  media_window_model.rs  metadata_extract.rs  motion_photo.rs  notify_watcher.rs  notify_watcher_callback.rs  notify_watcher_notifier.rs  refresh_coordinator.rs  release_metadata.rs  repository.rs  section_counts.rs  section_group.rs  sidebar_navigation.rs  smoke.rs  thumbnails.rs  trash_flow.rs  ui_accessibility_fallback.rs  ui_album_picker.rs  ui_context_menu.rs  ui_editor_page.rs  (+9 more)
tests/common/: mod.rs
tests/fixtures/media/: real_phone.heic
tools/: visual-check-x11.sh
tools/huawei-fuse-daemon/: Cargo.toml  README.md
tools/huawei-fuse-daemon/src/: main.rs
