[package]
name = "photo-viewer"
version = "0.1.0"
edition = "2021"

[lib]
name = "photo_viewer"
path = "src/lib.rs"

[[bin]]
name = "photo-viewer"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.8", features = ["v4_8"] }
libadwaita = { version = "0.6", features = ["v1_4"] }
gdk-pixbuf = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros", "sync"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
kamadak-exif = "0.6"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glib = "0.20"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"

[build-dependencies]
glib-build-tools = "0.20"

[dev-dependencies]
tempfile = "3"
image = "0.25"